Update frontend: improved login and register page