@@ -4,13 +4,13 @@ import lombok.RequiredArgsConstructor;
 import org.example.projectchat.model.User;
 import org.example.projectchat.repository.UserRepository;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -23,7 +23,7 @@ public class MyUserDetailService implements UserDetailsService {
         User appUser = userRepository.findByUsername(username)
                 .orElseThrow(() -> new UsernameNotFoundException("User with username: " + username + "not found"));
 
-        Collection<? extends GrantedAuthority> authorities = Collections.emptyList();
+        List<GrantedAuthority> authorities = List.of(new SimpleGrantedAuthority("USER"));
 
         return new org.springframework.security.core.userdetails.User(
                 appUser.getUsername(),
